# Velox

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fetch_price.py  pyproject.toml  requirements.txt
tests/: test_indicators.py
velox/: __init__.py  config.py  main.py
velox/analysis/: analyzer.py  utils.py
velox/analysis/indicators/: fvg.py  msa.py  rsi.py
velox/api/: server.py
velox/database/: repository.py
velox/fetcher/: binance.py  coingecko.py
