[project]
name = "velox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "fastapi>=0.135.3",
    "groq==1.1.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.20.0",
    "pytest==9.0.2",
    "python-dotenv==1.2.2",
    "sniffio==1.3.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn>=0.44.0",
]
